DB connection and answers fix